Implemented remaining Administration functionality and added many unit tests